Highlight text center aligned, landing title fix

--- a/src/index.css
+++ b/src/index.css
@@ -326,6 +326,7 @@ HIGHLIGHTS
     display: flex;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .highlight__para {
